# jsonlxlsx

./: .gitignore  LICENSE  PROVENANCE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  flake.nix  package-lock.json  package.json  pyproject.toml
.ci/: pr-xlsx-trigger-260625.txt  xlsx-trigger-260625.txt
.github/workflows/: smoke-e2e.yml  xlsx-artifact.yml  xlsx-dispatch.yml  xlsx-pr-ci.yml  (+2 more)
docs/: CLI_ADAPTER_DECISION.md  COMPLETE_SEPARATION.md  DESIGN.md  EXPORTABILITY.md  HUCRE_BACKEND.md  xlsx-push-trigger-proposal-extra-2.md  xlsx-push-trigger-proposal-extra-3.md  xlsx-push-trigger-proposal-extra-4.md  xlsx-push-trigger-proposal-extra-5.md  xlsx-push-trigger-proposal-extra-6.md  xlsx-push-trigger-proposal-extra.md  xlsx-push-trigger-proposal.md
examples/: demo_design.jsonl
jsonxlsx/: __init__.py  engine.py  reduce.py  render.py
records/: implementation-proposal.v1.jsonl  license.v1.jsonl  package.v1.jsonl  provenance.v1.jsonl  publication.v1.jsonl  security.v1.jsonl
scripts/: check-artifacts.mjs  check-exportability.js  check-exportability.mjs  ci-generate-xlsx.mjs  denyhashes.json  denylist.txt  generate-artifacts.mjs  generate-example.js
src/: cli.js  engine.js  reduce.js  render.js
test/: a1.test.mjs  browser-port.test.mjs  cli-adapter.test.mjs  exportability.test.js  layers.test.mjs  no-package-mode.test.mjs  reduce.test.js  render.test.js  semantic.test.mjs
tests/: __init__.py  test_exportability.py  test_reduce.py  test_render.py
tools/: check-syntax.mjs  lint-architecture.mjs  proof-hucre-canonical.mjs  proof-separated.mjs  proof.mjs
(+27 files in other folders)
